@@ -11,6 +11,7 @@ package GNUObjectGenerator;
 # ************************************************************
 
 use strict;
+use File::Basename;
 use ObjectGenerator;
 
 use vars qw(@ISA);
@@ -21,7 +22,7 @@ use vars qw(@ISA);
 # ************************************************************
 
 sub process {
-  my($noext)   = $_[1];
+  my($noext)   = basename($_[1]);
   my(@objects) = ();
   my(@exts)    = ('o');
   my(@dirs)    = (defined $ENV{VDIR} ? $ENV{VDIR} : '');
